Fix db ref in GHA

--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -67,7 +67,7 @@ jobs:
 
     - name: Run SQL Script
       run: |
-        PGPASSWORD=password psql -h 127.0.0.1 -U user -d mydb -f extras/rdms/full_data_model_pg.sql
+        PGPASSWORD=password psql -h 127.0.0.1 -U user -d strategus -f extras/rdms/full_data_model_pg.sql
 
     - name: Configure SchemaSpy environment
       run: |
