--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,10 +1,9 @@
-pandoc: 3.1.11
-pkgdown: 2.0.9
+pandoc: '3.2'
+pkgdown: 2.1.1
 pkgdown_sha: ~
 articles:
-  CreatingAnalysisSpecification: CreatingAnalysisSpecification.html
-  CreatingModules: CreatingModules.html
-  ExecuteStrategus: ExecuteStrategus.html
   IntroductionToStrategus: IntroductionToStrategus.html
-last_built: 2024-06-04T21:18Z
-
+last_built: 2024-10-01T16:55Z
+urls:
+  reference: https://ohdsi.github.io/Strategus/reference
+  article: https://ohdsi.github.io/Strategus/articles
