--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,8 +2,11 @@ pandoc: '3.2'
 pkgdown: 2.1.1
 pkgdown_sha: ~
 articles:
+  CreatingAnalysisSpecification: CreatingAnalysisSpecification.html
+  ExecuteStrategus: ExecuteStrategus.html
   IntroductionToStrategus: IntroductionToStrategus.html
-last_built: 2024-10-01T16:55Z
+  WorkingWithResults: WorkingWithResults.html
+last_built: 2024-10-02T19:00Z
 urls:
   reference: https://ohdsi.github.io/Strategus/reference
   article: https://ohdsi.github.io/Strategus/articles
