--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -55,7 +55,7 @@ reference:
   - subtitle: "Results HADES Modules"
     desc: >
       These modules are designed to run against results that are produced
-      by one or more OMOP CDM HADES Modules. Results will be stored in
+      by one or more OMOP CDM HADES Modules. Results must be stored in
       a PostgreSQL database.
     contents:
       - EvidenceSynthesisModule
@@ -85,8 +85,22 @@ reference:
 navbar:
   bg: dark
   structure:
+    left:
+    - reference
+    - articles
+    - changelog
+    - resultsmodel
     right: [hades, github]
   components:
+    reference:
+      text: Reference
+      href: reference/index.html
+    changelog:
+      text: Changelog
+      href: news/index.html
+    resultsmodel:
+      text: Results model documentation
+      href: results-schema/index.html
     hades:
       text: hadesLogo
       href: https://ohdsi.github.io/Hades
