--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -65,4 +65,5 @@ NeedsCompilation: no
 RoxygenNote: 7.3.2
 Roxygen: list(markdown = TRUE)
 Encoding: UTF-8
+Language: en-US
 Config/testthat/edition: 3
