--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: Strategus
 Type: Package
 Title: Coordinate and Execute OHDSI HADES Modules
 Version: 1.0.0
-Date: 2024-10-03
+Date: 2024-10-08
 Authors@R: c(
 	person("Anthony", "Sena", email = "sena@ohdsi.org", role = c("aut", "cre")),
 	person("Martijn", "Schuemie", email = "schuemie@ohdsi.org", role = c("aut")),
@@ -65,4 +65,5 @@ NeedsCompilation: no
 RoxygenNote: 7.3.2
 Roxygen: list(markdown = TRUE)
 Encoding: UTF-8
+Language: en-US
 Config/testthat/edition: 3
