Updated TP module

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(EvidenceSynthesisModule)
 export(PatientLevelPredictionModule)
 export(SelfControlledCaseSeriesModule)
 export(StrategusModule)
+export(TreatmentPatternsModule)
 export(addCharacterizationModuleSpecifications)
 export(addCohortDiagnosticsModuleSpecifications)
 export(addCohortGeneratorModuleSpecifications)
@@ -19,6 +20,7 @@ export(addModuleSpecifications)
 export(addPatientLevelPredictionModuleSpecifications)
 export(addSelfControlledCaseSeriesModuleSpecifications)
 export(addSharedResources)
+export(addTreatmentPatternsModuleSpecifications)
 export(createCdmExecutionSettings)
 export(createEmptyAnalysisSpecificiations)
 export(createResultDataModel)
