--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -108,14 +108,14 @@ jobs:
           )
           covr::to_cobertura(cov)
         shell: Rscript {0}
-        
+
       - uses: codecov/codecov-action@v4
         if: runner.os == 'Linux'
         with:
           file: ./cobertura.xml
           plugin: noop
           disable_search: true
-          token: ${{ secrets.CODECOV_TOKEN }}        
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   Release:
     needs: R-CMD-Check
@@ -155,34 +155,33 @@ jobs:
           draft: false
           prerelease: false
 
-      # AGS: Commenting out until Strategus is in HADES
-      # - uses: r-lib/actions/setup-r@v2
-      #   if: ${{ env.new_version != '' }}
-      #
-      # - name: Install drat
-      #   if: ${{ env.new_version != '' }}
-      #   run: |
-      #     install.packages('drat')
-      #   shell: Rscript {0}
-      #
-      # - name: Remove any tarballs that already exists
-      #   if: ${{ env.new_version != '' }}
-      #   run: |
-      #     rm -f *.tar.gz
-      #
-      # - name: Download package tarball
-      #   if: ${{ env.new_version != '' }}
-      #   uses: actions/download-artifact@v4
-      #   with:
-      #     name: package_tarball
-      #
-      # - name: Push to drat
-      #   if: ${{ env.new_version != '' }}
-      #   run: |
-      #     bash deploy.sh
-      #
-      # - name: Push to BroadSea
-      #   if: ${{ env.new_version != '' }}
-      #   run: |
-      #     curl --data "build=true" -X POST https://registry.hub.docker.com/u/ohdsi/broadsea-methodslibrary/trigger/f0b51cec-4027-4781-9383-4b38b42dd4f5/
-      #
+      - uses: r-lib/actions/setup-r@v2
+        if: ${{ env.new_version != '' }}
+
+      - name: Install drat
+        if: ${{ env.new_version != '' }}
+        run: |
+          install.packages('drat')
+        shell: Rscript {0}
+
+      - name: Remove any tarballs that already exists
+        if: ${{ env.new_version != '' }}
+        run: |
+          rm -f *.tar.gz
+
+      - name: Download package tarball
+        if: ${{ env.new_version != '' }}
+        uses: actions/download-artifact@v4
+        with:
+          name: package_tarball
+
+      - name: Push to drat
+        if: ${{ env.new_version != '' }}
+        run: |
+          bash deploy.sh
+
+      - name: Push to BroadSea
+        if: ${{ env.new_version != '' }}
+        run: |
+          curl --data "build=true" -X POST https://registry.hub.docker.com/u/ohdsi/broadsea-methodslibrary/trigger/f0b51cec-4027-4781-9383-4b38b42dd4f5/
+
