--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,6 +46,7 @@ Suggests:
   rmarkdown,
   RSQLite,
   SelfControlledCaseSeries,
+  SelfControlledCohort@version-2.0.0,
   testthat (>= 3.0.0),
   withr
 Remotes:
@@ -56,7 +57,8 @@ Remotes:
   ohdsi/CohortMethod,
   ohdsi/PatientLevelPrediction,
   ohdsi/ResultModelManager,
-  ohdsi/SelfControlledCaseSeries
+  ohdsi/SelfControlledCaseSeries,
+  ohdsi/SelfControlledCohort
 License: Apache License 2.0
 VignetteBuilder: knitr
 URL: https://ohdsi.github.io/Strategus, https://github.com/OHDSI/Strategus
