validation module update
- removing model transfer
- updating validation module
- adding tests for validation module

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(CohortIncidenceModule)
 export(CohortMethodModule)
 export(EvidenceSynthesisModule)
 export(PatientLevelPredictionModule)
+export(PatientLevelPredictionValidationModule)
 export(SelfControlledCaseSeriesModule)
 export(StrategusModule)
 export(addCharacterizationModuleSpecifications)
@@ -17,6 +18,7 @@ export(addCohortMethodeModuleSpecifications)
 export(addEvidenceSynthesisModuleSpecifications)
 export(addModuleSpecifications)
 export(addPatientLevelPredictionModuleSpecifications)
+export(addPatientLevelPredictionValidationModuleSpecifications)
 export(addSelfControlledCaseSeriesModuleSpecifications)
 export(addSharedResources)
 export(createCdmExecutionSettings)
