Treatment patterns module (#215)
* Adds the experimental TreatmentPatterns module

---------

Co-authored-by: DrTechnoTrousers <jack.brewster@iqvia.com>
Co-authored-by: Maarten van Kessel <m.vankessel@mi-erasmusmc.nl>
Co-authored-by: Maarten van Kessel <112690347+mvankessel-EMC@users.noreply.github.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(PatientLevelPredictionModule)
 export(PatientLevelPredictionValidationModule)
 export(SelfControlledCaseSeriesModule)
 export(StrategusModule)
+export(TreatmentPatternsModule)
 export(addCharacterizationModuleSpecifications)
 export(addCohortDiagnosticsModuleSpecifications)
 export(addCohortGeneratorModuleSpecifications)
@@ -21,6 +22,7 @@ export(addPatientLevelPredictionModuleSpecifications)
 export(addPatientLevelPredictionValidationModuleSpecifications)
 export(addSelfControlledCaseSeriesModuleSpecifications)
 export(addSharedResources)
+export(addTreatmentPatternsModuleSpecifications)
 export(createCdmExecutionSettings)
 export(createEmptyAnalysisSpecificiations)
 export(createResultDataModel)
