--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,6 +47,7 @@ Suggests:
   RSQLite,
   SelfControlledCaseSeries,
   testthat (>= 3.0.0),
+  TreatmentPatterns,
   withr
 Remotes:
   ohdsi/Characterization,
