Add libicu66 reinstall command

--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -66,12 +66,14 @@ jobs:
       - name: Install system requirements
         if: runner.os == 'Linux'
         run: |
+          sudo apt-get update
           sudo apt-get install -y libssh-dev
+          sudo apt-get install -y --reinstall libicu66
           Rscript -e 'install.packages("remotes")'
           while read -r cmd
           do
             eval sudo $cmd
-          done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "20.04"))')
+          done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "24.04"))')
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
