--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -68,7 +68,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libssh-dev
-          sudo apt-get install -y --reinstall libicu66
+          sudo apt-get install -y libicu72
           Rscript -e 'install.packages("remotes")'
           while read -r cmd
           do
