--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -66,9 +66,8 @@ jobs:
       - name: Install system requirements
         if: runner.os == 'Linux'
         run: |
-          sudo apt-get update
           sudo apt-get install -y libssh-dev
-          Rscript -e 'install.packages("remotes")'
+          Rscript -e 'install.packages("remotes", "stringi")'
           while read -r cmd
           do
             eval sudo $cmd
