--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -22,7 +22,7 @@ jobs:
         config:
           #- {os: windows-latest, r: 'release', rtools: '', rspm: "https://cloud.r-project.org"}
           #- {os: macOS-latest, r: 'release', rtools: '', rspm: "https://cloud.r-project.org"}
-          - {os: ubuntu-22.04, r: 'release', rtools: '', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
+          - {os: ubuntu-22.04, r: 'release'}
 
     env:
       GITHUB_PAT: ${{ secrets.GH_TOKEN }}
