--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -66,6 +66,9 @@ jobs:
       - name: Install system requirements
         if: runner.os == 'Linux'
         run: |
+          sudo apt-get update
+          sudo apt-get install r-base
+          sudo apt-get install r-base-dev
           sudo apt-get install -y libssh-dev
           Rscript -e 'install.packages("remotes")'
           while read -r cmd
