--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -67,8 +67,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install r-base
-          sudo apt-get install r-base-dev
+          sudo apt-get install libjson
           sudo apt-get install -y libssh-dev
           Rscript -e 'install.packages("remotes")'
           while read -r cmd
