--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -67,6 +67,8 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
+          sudo apt-get install r-base
+          sudo apt-get install r-base-dev
           sudo apt-get install libjson-c-dev
           sudo apt-get install -y libssh-dev
           Rscript -e 'install.packages("remotes")'
