--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -58,7 +58,6 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
-          use-public-rspm: true
 
       - uses: r-lib/actions/setup-tinytex@v2
 
@@ -67,12 +66,8 @@ jobs:
       - name: Install system requirements
         if: runner.os == 'Linux'
         run: |
-          sudo apt-get update
-          sudo apt-get install r-base
-          sudo apt-get install r-base-dev
-          sudo apt-get install libjson-c-dev
           sudo apt-get install -y libssh-dev
-          Rscript -e 'install.packages("remotes")'
+          Rscript -e 'install.packages(c("remotes", "Rcpp"))'
           while read -r cmd
           do
             eval sudo $cmd
