--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -67,17 +67,12 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get install -y libssh-dev
-          sudo apt-get install r-base
-          sudo apt-get install r-base-dev
-          sudo apt-get install libjson-c-dev
-          sudo apt-get install gfortran
           Rscript -e 'install.packages(c("remotes", "Rcpp"))'
+          Rscript -e 'install.packages("RJSONIO", type = "binary")'
           while read -r cmd
           do
             eval sudo $cmd
           done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "22.04"))')
-          sudo apt-get update
-          sudo apt-get upgrade
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
