--- a/.github/workflows/R_CMD_check_Hades.yaml
+++ b/.github/workflows/R_CMD_check_Hades.yaml
@@ -22,7 +22,7 @@ jobs:
         config:
           #- {os: windows-latest, r: 'release', rtools: '', rspm: "https://cloud.r-project.org"}
           #- {os: macOS-latest, r: 'release', rtools: '', rspm: "https://cloud.r-project.org"}
-          - {os: ubuntu-22.04, r: 'release'}
+          - {os: ubuntu-24.04, r: 'release'}
 
     env:
       GITHUB_PAT: ${{ secrets.GH_TOKEN }}
@@ -98,16 +98,16 @@ jobs:
           remotes::install_cran("xml2")
         shell: Rscript {0}
 
-      - name: Test coverage
-        if: runner.os == 'Linux'
-        run: |
-          cov <- covr::package_coverage(
-            quiet = FALSE,
-            clean = FALSE,
-            install_path = file.path(normalizePath(Sys.getenv("RUNNER_TEMP"), winslash = "/"), "package")
-          )
-          covr::to_cobertura(cov)
-        shell: Rscript {0}
+      # - name: Test coverage
+        # if: runner.os == 'Linux'
+        # run: |
+          # cov <- covr::package_coverage(
+            # quiet = FALSE,
+            # clean = FALSE,
+            # install_path = file.path(normalizePath(Sys.getenv("RUNNER_TEMP"), winslash = "/"), "package")
+          # )
+          # covr::to_cobertura(cov)
+        # shell: Rscript {0}
 
       - uses: codecov/codecov-action@v4
         if: runner.os == 'Linux'
