saving with hash of settings in name
- added hash of specification into the json saving to help identify new settings vs old settings
- partition functions now return all the json locations of the partitioned settings
- exported the partitioning function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(createResultsDataModelSettings)
 export(createResultsExecutionSettings)
 export(execute)
 export(getCdmDatabaseMetaData)
+export(partitionModule)
 export(uploadResults)
 export(zipResults)
 import(CohortGenerator)
