--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,7 @@ Imports:
 Suggests:
   Characterization,
   CirceR,
-  CohortDiagnostics,
+  CohortDiagnostics (>= 3.4.0),
   CohortIncidence,
   CohortMethod,
   Cyclops,
