--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,7 +53,8 @@ Remotes:
   ohdsi/CohortDiagnostics,
   ohdsi/CohortIncidence,
   ohdsi/CohortMethod,
-  ohdsi/SelfControlledCaseSeries
+  ohdsi/SelfControlledCaseSeries,
+  ohdsi/EvidenceSynthesis@pooled_sccs
 License: Apache License 2.0
 VignetteBuilder: knitr
 URL: https://ohdsi.github.io/Strategus, https://github.com/OHDSI/Strategus
