--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,7 +45,7 @@ Suggests:
   readr,
   rmarkdown,
   RSQLite,
-  SelfControlledCaseSeries,
+  SelfControlledCaseSeries (>= 6.0.0),
   testthat (>= 3.0.0),
   TreatmentPatterns (>= 3.1.0),
   withr
@@ -56,8 +56,7 @@ Remotes:
   ohdsi/CohortIncidence,
   ohdsi/CohortMethod,
   ohdsi/PatientLevelPrediction,
-  ohdsi/ResultModelManager,
-  ohdsi/SelfControlledCaseSeries
+  ohdsi/ResultModelManager
 License: Apache License 2.0
 VignetteBuilder: knitr
 URL: https://ohdsi.github.io/Strategus, https://github.com/OHDSI/Strategus
