--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,7 @@ Suggests:
   FeatureExtraction,
   fs,
   knitr,
-  PatientLevelPrediction,
+  PatientLevelPrediction (>= 6.5.0),
   readr,
   rmarkdown,
   RSQLite,
@@ -52,11 +52,8 @@ Suggests:
 Remotes:
   ohdsi/Characterization,
   ohdsi/CohortDiagnostics,
-  ohdsi/CohortGenerator,
   ohdsi/CohortIncidence,
-  ohdsi/CohortMethod,
-  ohdsi/PatientLevelPrediction,
-  ohdsi/ResultModelManager
+  ohdsi/CohortMethod
 License: Apache License 2.0
 VignetteBuilder: knitr
 URL: https://ohdsi.github.io/Strategus, https://github.com/OHDSI/Strategus
