Fix spelling of createEmptyAnalysisSpecifications

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(addSelfControlledCaseSeriesModuleSpecifications)
 export(addSharedResources)
 export(addTreatmentPatternsModuleSpecifications)
 export(createCdmExecutionSettings)
+export(createEmptyAnalysisSpecifications)
 export(createEmptyAnalysisSpecificiations)
 export(createResultDataModel)
 export(createResultsDataModelSettings)
